update client library